--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,16 +18,14 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: sticky;
   position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  position: sticky;
   top: 0;
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;  
   background-attachment: fixed;
   background-position: 80%;
+  z-index: 9999;
 }
 
 header h1 {
@@ -68,6 +66,7 @@ header nav ul li a:hover {
   border-radius: 15px;
   text-shadow: none;
 }
+
 /* HEADER / NAVBAR STYLES END */
 
 
@@ -107,11 +106,12 @@ section {
 .hero {
   background-image: url('../images/hero-bg.jpg');
   background-size: cover;
-  background-position: center;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 .hero-cta {
@@ -132,13 +132,17 @@ section {
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: rgba(252, 225, 56, 0.8);
+  background-color: rgba(255, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
 }
 
 .hero-form h3 {
@@ -157,7 +161,7 @@ section {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px; 
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: rgba(255,255,255, 0.75);
 }
 
@@ -176,12 +180,69 @@ section {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-  border-radius: 15px;
+  border-radius: 10px;
 } 
 
-.hero-form button:hover {
-  background-color: #39a6b2;  
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
 }
+
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid #024e76;  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid #024e76;
+  border-bottom: 2px solid #024e76;
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
+}
+
 /* HERO STYLES END */
 
 
@@ -227,14 +288,15 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
+  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
 
-.step:not(:last-child) {
-  border-bottom: 1px solid #39a6b2;
+.step:last-child {
+  border-bottom: none;
 }
 
 .step h3 {
@@ -273,7 +335,6 @@ section {
   line-height: 1.5;
   color: #024e76;
 }
-
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
@@ -365,7 +426,7 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: rgba(255,255,255, 0.75);
 }
 
@@ -382,7 +443,7 @@ section {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .contact-form button:hover {
@@ -393,8 +454,6 @@ section {
 .contact-info a {
   color: #fce138;
 }
-
-
 /* REACH OUT STYLES END */
 
 /* UTILITIES */
@@ -485,6 +544,10 @@ section {
 
   .step-text {
     flex: 100%;  
+  }
+
+  .trainer-bio h3, .trainer-bio h4 {
+    display: block;
   }
 }
 
